# EspPowerLogger

./: .cursorrules  .gitignore  CMakeLists.txt  README_WEBSERVER.md  SD_CARD_PINOUT.md  TFT_SCREEN_PINOUT.md  partitionsSpiffs1MB.csv  sdkconfig  sdkconfig.old
components/ina219/: CMakeLists.txt  README.md  ina219.c
components/ina219/include/: ina219.h
main/: CMakeLists.txt  config_manager.c  config_manager.h  definitions.c  definitions.h  hello_world_main.c  screen_driver.c  screen_driver.h  wifi_config.c
main/tasks/: data_logger.c  data_logger.h  monitoring_task.c  screen_task.c  screen_task.h  webserver_simple.c
main/tasks/button_task/: button_task.c  button_task.h
main/tasks/data_logger/: data_logger.c  data_logger.h
main/tasks/monitoring_task/: monitoring_task.c  monitoring_task.h
main/tasks/screen_task/: screen_task.c  screen_task.h
main/tasks/time_sync/: time_sync.c  time_sync.h
main/tasks/webserver_simple/: webserver_simple.c
main/utils/: utils.c
main/utils/config_manager/: config_manager.c
main/utils/definitions/: definitions.c  definitions.h
main/utils/screen_driver/: screen_driver.c  screen_driver.h
main/utils/sdcard_driver/: sdcard_driver.c  sdcard_driver.h
main/utils/wifi_config/: wifi_config.c  wifi_config.h
spiffs/: index.html
