idf_component_register(SRCS "hello_world_main.c" "utils/utils.c" "utils/definitions/definitions.c" "tasks/monitoring_task/monitoring_task.c" "tasks/webserver_simple/webserver_simple.c" "tasks/data_logger/data_logger.c" "tasks/time_sync/time_sync.c" "tasks/screen_task/screen_task.c" "utils/wifi_config/wifi_config.c" "utils/config_manager/config_manager.c" "utils/screen_driver/screen_driver.c" "utils/sdcard_driver/sdcard_driver.c"
                       PRIV_REQUIRES spi_flash driver ina219 esp_http_server json esp_wifi esp_event nvs_flash esp_netif esp_timer spiffs lwip sdmmc fatfs
                       INCLUDE_DIRS "utils" "tasks"  ".")
